# next-dj

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  build_hooks.py  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug_report.md  02-feature_request.md  03-question.md  config.yml
.github/workflows/: bench.yml  ci.yml  release.yml  test-examples.yml  test-matrix.yml
dev/bench/: data.js
docs/: 404.rst  README.md  conf.py  dependency_injection.md  index.rst  requirements.txt
docs/_static/: custom.css  custom.js
docs/_templates/: base.html
docs/content/: autoreload.rst  dependency-injection.rst
examples/: .coveragerc  README.md  di_example.py
examples/_shared/: README.md
examples/_template/: README.md  conftest.py
examples/admin/: README.md  conftest.py
examples/audit-forms/: README.md  conftest.py  manage.py
examples/components/: README.md  pytest.ini
examples/feature-flags/: README.md  conftest.py
examples/file-routing/: .coveragerc  README.md  conftest.py  tests.py
examples/forms/: README.md
examples/kanban/: README.md  conftest.py  package-lock.json  package.json  vite.config.ts  vitest.config.ts
examples/layouts/: .coveragerc  README.md  conftest.py  tests.py
examples/live-polls/: README.md  conftest.py  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
examples/markdown-blog/: README.md  conftest.py  pytest.ini
examples/multi-tenant/: README.md  conftest.py
examples/observability/: README.md  conftest.py
examples/pages/: .coveragerc  README.md  conftest.py  tests.py
examples/search-catalog/: README.md  conftest.py
examples/shortener/: README.md  conftest.py  pytest.ini
examples/static/: README.md
examples/wiki/: README.md  conftest.py
next/: __init__.py  apps.py  checks.py  components.py  conf.py  dependencies.py  dependency_resolver.py  deps.py  filesystem.py  forms.py  pages.py  server.py  signals.py  static.py  templates.py  urls.py  utils.py
next/apps/: __init__.py  autoreload.py  checks.py  components.py  config.py  staticfiles.py  templates.py
next/checks/: __init__.py  common.py
next/client/: adapters.ts  apply.merge.test.ts  apply.test.ts  apply.ts  assets.test.ts  assets.ts  dirty.test.ts  dirty.ts  golden.test.ts  layers.flow.test.ts  layers.test.ts  layers.ts  morph.bugs.test.ts  morph.live.test.ts  morph.reuse.test.ts  morph.test.ts  morph.ts  next.test.ts  next.ts  partial.test.ts  partial.ts  protocol.ts  sse.test.ts  sse.ts  triggers.test.ts  triggers.ts  wire.test.ts  wire.ts
next/components/: __init__.py  backends.py  checks.py  context.py  facade.py  info.py  loading.py  manager.py  registry.py  renderers.py  scanner.py  signals.py  watch.py
next/conf/: __init__.py  checks.py  defaults.py  helpers.py  imports.py  settings.py  signals.py
next/forms/: __init__.py  _request_utils.py  autodiscover.py  backends.py  base.py  checks.py  decorators.py  diagnostics.py  dispatch.py  exceptions.py  formsets.py  manager.py  markers.py  origin.py  registration.py  rendering.py  serializers.py  signals.py  uid.py  widgets.py  wizard.py
next/pages/: __init__.py  checks.py  context.py  loaders.py  manager.py  processors.py  registry.py  signals.py  watch.py
next/partial/: __init__.py  backends.py  checks.py  headers.py  keys.py  manager.py  markers.py  origin.py  patches.py  registry.py  render.py  shaping.py  signals.py  sse.py  view.py  zone.py
next/server/: __init__.py  autoreload.py  checks.py  roots.py  signals.py  watcher.py
next/static/: __init__.py  assets.py  backends.py  checks.py  collector.py  defaults.py  discovery.py  finders.py  manager.py  scripts.py  serializers.py  signals.py
next/templatetags/: __init__.py  components.py  forms.py  next_static.py  partial.py
next/testing/: __init__.py  actions.py  client.py  deps.py  html.py  isolation.py  loaders.py  patching.py  rendering.py  signals.py
next/urls/: __init__.py  backends.py  checks.py  dispatcher.py  manager.py  markers.py  parser.py  reverse.py  signals.py
tests/: __init__.py  conftest.py  django_setup.py  fixtures.py  support.py  test_apps.py  test_components.py  test_conf.py  test_context_manager.py  test_dependencies.py  test_dependency_resolver.py  test_deps.py  test_forms.py  test_pages.py  test_pages_di.py  test_server.py  test_static.py  test_templates.py  test_urls.py  test_utils.py
tests/apps/: test_checks.py  test_config.py  test_templates.py
tests/benchmarks/: conftest.py  factories.py  test_perf.py
tests/compat/: conftest.py  test_allauth.py  test_crispy_forms.py  test_django_htmx.py  test_widget_tweaks.py  urls_allauth.py
tests/components/: conftest.py  test_backends.py  test_checks.py  test_context.py  test_manager.py  test_registry.py  test_signals.py  test_tags.py
tests/conf/: test_helpers.py  test_settings.py  test_signals.py
tests/forms/: actions.py  conftest.py  test_autodiscover.py  test_backends.py  test_base.py  test_checks.py  test_decorators.py  test_diagnostics.py  test_dispatch.py  test_exceptions.py  test_field_components.py  test_formsets.py  test_guards.py  test_instance_from_url.py  test_markers.py  test_origin.py  test_perf_budgets.py  test_public_surface.py  test_registration.py  test_rendering.py  test_request_utils.py  test_scope_utils.py  test_serializers.py  test_signals.py  test_success.py  test_uid.py  test_wizard.py  urls_i18n.py  urls_tenant.py
tests/pages/: __init__.py  conftest.py  template.djx  test_checks.py  test_loaders.py  test_manager.py  test_registry.py  test_signals.py  test_urls.py  test_watch.py
tests/partial/: conftest.py  golden_support.py  regression_forms.py  result_forms.py  test_backends.py  test_builder.py  test_checks.py  test_foreign_zone.py  test_golden.py  test_headers.py  test_init_surface.py  test_keys.py  test_manager.py  test_markers.py  test_patches.py  (+17 more)
(+945 files in other folders)
