[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "next.dj"
dynamic = ["version"]
description = "Next-gen framework for Django developers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["django", "framework", "low-code", "frontend", "full-stack framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "django>=4.2,<6.1",
]

[project.urls]
Homepage = "https://github.com/next-dj/next-dj"
Documentation = "https://next-dj.readthedocs.io/"
Repository = "https://github.com/next-dj/next-dj"
"Bug Tracker" = "https://github.com/next-dj/next-dj/issues"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "django-stubs[compatible-mypy]==5.2.9",
    "ruff==0.14.14",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "build==1.4.0",
    "twine==6.2.0",
]
docs = [
    "sphinx==8.2.3",
    "shibuya==2026.1.9",
    "sphinx-design==0.7.0",
    "sphinx-copybutton==0.5.2",
    "myst-parser==5.0.0",
    "sphinx-autodoc-typehints==3.5.2",
    "sphinxcontrib-apidoc==0.6.0",
]

[tool.hatch.version]
source = "code"
path = "next/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["next"]

[tool.hatch.build.targets.sdist]
include = [
    "next/",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "pyproject.toml",
]
exclude = [
    "examples/",
    "docs/",
    "tests/",
    ".github/",
    ".gitignore",
    "Makefile",
    "MANIFEST.in",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=next",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.run]
source = ["next"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/settings.py",
    "*/manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    # core
    "next/checks.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "migrations",

    # Project annotation file
    "next/__init__.py"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002", "ANN003",
    "B008",   # do not perform function calls in argument defaults (Django settings)

    # Framework-specific ignores
    "SLF001", # private member access (framework code needs this)

    # Docstring rule conflicts - choose one of each conflicting pair
    "D203",   # incorrect-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)

    # Formatter conflicts
    "COM812", # trailing-comma-missing (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = [
    "D100", "D101", "D103", "D104", "D105", "D106", "D401",
    "E501", "EXE001",
    "INP001",
    "S105", "S106"
]
"tests/pages/*" = ["INP001", "D104"]
"**/{test*,conftest}.py" = [
    "ANN001", "ANN201", "ANN202",
    "ARG001", "ARG002", "ARG005",
    "S101", "D100",
    "PLR2004", "PLR0913", "S108", "E501", "FBT003",
]
"**/migrations/**/*.py" = ["F401", "PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["next"]
force-single-line = false
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true
fixture-parentheses = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.django-stubs]
django_settings_module = "django.conf.global_settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# only check next folder
packages = ["next"]

# ignore type checking for *args, **kwargs parameters
disable_error_code = ["no-untyped-def"]
