[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "next.dj"
dynamic = ["version"]
description = "Next-gen framework for Django developers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["django", "framework", "low-code", "frontend", "full-stack framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "django>=4.2,<6.1",
]

[project.urls]
Homepage = "https://github.com/next-dj/next-dj"
Documentation = "https://next-dj.readthedocs.io/"
Repository = "https://github.com/next-dj/next-dj"
"Bug Tracker" = "https://github.com/next-dj/next-dj/issues"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "django-stubs[compatible-mypy]==6.0.3",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "build==1.5.0",
    "twine==6.2.0",
    "pytest-xdist==3.8.0",
    "pytest-lazy-fixtures==1.4.0",
    "pytest-benchmark==5.2.3",
    "pydantic>=2.0",
    "markdown>=3.7",
    "time-machine>=2.16",
]
docs = [
    "doc8==2.0.0",
    "sphinx==9.1.0",
    "shibuya==2026.1.9",
    "sphinx-design==0.7.0",
    "sphinx-copybutton==0.5.2",
    "myst-parser==5.0.0",
    "sphinx-autodoc-typehints==3.10.2",
    "sphinxcontrib-apidoc==0.6.0",
]

[tool.hatch.version]
source = "code"
path = "next/__init__.py"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks.py"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "build_hooks.py"

[tool.hatch.build.targets.wheel]
packages = ["next"]
artifacts = ["next/static/next/next.min.js"]
exclude = [
    "next/static/next/next.ts",
    "next/static/next/next.test.ts",
]

[tool.hatch.build.targets.sdist]
include = [
    "next/",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "pyproject.toml",
    "build_hooks.py",
    "package.json",
    "package-lock.json",
]
artifacts = ["next/static/next/next.min.js"]
exclude = [
    "next/static/next/next.test.ts",
    "examples/",
    "docs/",
    "tests/",
    ".github/",
    ".gitignore",
    "Makefile",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "perf: performance benchmarks (opt-in, run with -m perf)",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=next",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    "--ignore=tests/benchmarks",
    "-p", "no:benchmark",
]

[tool.coverage.run]
parallel = true
source = ["next"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/settings.py",
    "*/manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    # core
    "*/next/checks/*",
    "*/next/conf/checks.py",
    "*/next/pages/checks.py",
    "*/next/urls/checks.py",
    "*/next/components/checks.py",
    "*/next/forms/checks.py",
    "*/next/deps/checks.py",
    "*/next/server/checks.py",
]

# Collapse source-tree and site-packages paths so coverage reports, omits, and
# the fail-under threshold behave identically whether the package is imported
# from `next/` (editable/dev) or from a wheel installed into a venv (CI).
[tool.coverage.paths]
source = [
    "next/",
    "*/site-packages/next/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "migrations",

    # Project annotation file
    "next/__init__.py",

    # Sphinx configuration
    "docs/conf.py",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Framework-specific ignores
    "SLF001", # private member access (framework code needs this)

    # Docstring rule conflicts - choose one of each conflicting pair
    "D203",   # incorrect-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)

    # Formatter conflicts
    "COM812", # trailing-comma-missing (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = [
    "D100", "D101", "D103", "D104", "D105", "D106",
    "EXE001",
    "INP001",
    "S105",
]
"tests/__init__.py" = ["D104"]
"tests/pages/__init__.py" = ["D104"]
"tests/pages/*" = ["INP001", "D104"]
"tests/site_pages/__init__.py" = ["D104"]
"tests/site_pages/*" = ["INP001", "D104"]
"tests/forms/__init__.py" = ["D104"]
"tests/forms/*" = ["INP001", "D104"]
"**/{test*,conftest}.py" = [
    "ANN001", "ANN201", "ANN202",
    "ARG001", "ARG002", "ARG003",
    "S101", "S105", "S106", "S108",
    "D100", "D101", "D102", "D103", "D104",
    "PLR2004", "PLR0913",
    "E501", "FBT003",
]
"**/migrations/**/*.py" = ["F401", "PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["next"]
force-single-line = false
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true
fixture-parentheses = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.doc8]
max-line-length = 200
ignore-path = [
    "docs/_build",
    "docs/_static",
    "docs/_images",
]

[tool.django-stubs]
django_settings_module = "django.conf.global_settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# only check next folder
packages = ["next"]

# ignore type checking for *args, **kwargs parameters
disable_error_code = ["no-untyped-def"]
